# RPL-2.0-activities

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-pytest.yml
src/: main.py
src/config/: database.py
src/dependencies/: authentication.py  authorization.py  token.py
src/models/: activities.py  categories.py  rpl_files.py
src/repositories/: activities.py  categories.py  main.py  rpl_files.py
src/routers/: activities.py  categories.py
src/schemas/: activities.py  categories.py  rpl_files.py
src/services/: activities.py  categories.py  main.py  rpl_files.py
src/utils/: tar_utils.py
tests/http/: test_activities.py  test_categories.py
tests/http/resources/: main.py
tests/unit/repositories/: test_activities.py  test_categories.py  test_rpl_files.py
tests/unit/services/: test_activities.py  test_categories.py  test_rpl_files.py
