[tool.poetry]
name = "rpl-2-0-activities"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  {include = "src"},
  {include = "src/**/*.py"}
]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
pymysql = "^1.0.2"
sqlmodel = "^0.0.8"
httpx = "^0.23.3"
python-multipart = "^0.0.6"

[tool.poetry.scripts]
start = "src.main:start"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
